Add LoginForm validation

--- a/src/components/LoginForm/LoginForm.less
+++ b/src/components/LoginForm/LoginForm.less
@@ -2,9 +2,9 @@
 
 .login {
   max-width: 300px;
-  background-color: #989898;
+  border-color: grey;
   padding: 15px 15px 15px 15px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 10px;
+  border-radius: 1px;
 }
