Create register page

--- a/src/components/Marketing/Marketing.less
+++ b/src/components/Marketing/Marketing.less
@@ -1,12 +1,12 @@
 @import "../common";
 
-@media (max-width: @screen-md-max) {
+@media (max-width: @screen-sm-max) {
   .marketing-big {
     display: none;
   }
 }
 
-@media (min-width: @screen-md-max) {
+@media (min-width: @screen-sm-max) {
   .marketing-small {
     display: none;
   }
@@ -16,6 +16,11 @@
   background-color: black;
   border-radius: 10px;
   opacity: 0.8;
+}
+
+.marketing {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Main marketing message and sign up button */
