--- a/src/components/GatePage/GatePage.less
+++ b/src/components/GatePage/GatePage.less
@@ -1,6 +1,12 @@
 @import "../common";
 
-.login {
+.gate-content {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gate-login {
   max-width: 300px;
   border-color: grey;
   padding: 15px 15px 15px 15px;
