--- a/src/components/Chat/Chat.less
+++ b/src/components/Chat/Chat.less
@@ -1,11 +1,11 @@
 @import "../common";
 
-.chatbox {
-  height: 70vh;
+.chatlist {
+  height: 69vh;
   overflow-y: auto;
 }
 
-.chat-row {
+.chatlist-row {
   margin-bottom: 30px;
   margin-top: 30px;
 }
