Wiring Chat page

--- a/src/components/Chat/Chat.less
+++ b/src/components/Chat/Chat.less
@@ -1,8 +1,8 @@
 @import "../common";
 
 .chatlist {
-  height: 69vh;
-  overflow-y: auto;
+  height: 60%;
+  overflow-y: scroll;
 }
 
 .chatlist-row {
